--- a/app/views/admins_ativo/aquisicaos/_form.html.erb
+++ b/app/views/admins_ativo/aquisicaos/_form.html.erb
@@ -1,2 +1,76 @@
+<% if @aquisicao.errors.any? %>
+    <div class="alert alert-danger alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <ul>
+            <% @aquisicao.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+        </ul>
+    </div>
+<% end %>
 
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary"></h6>
+  </div>
+  <div class="card-body">
+    <%= form_with(model: [ :admins_ativo, @aquisicao ], local: true ) do |form| %>
+      <div class="row g-3">
+        <div class="form-group col-md-3">
+          <code>*</code>
+          <%= form.label :aquisicao_modalidade %>
+              <%= link_to new_admins_ativo_aquisicao_modalidade_path do %>
+                <i class="fa fa-plus" style="color:green"></i>
+              <% end %>
+          <%= form.select("aquisicao_modalidade_id", @modalidade_selects, {include_blank: 'Selecione...'}, class:"form-control") %>
+        </div>
+        <div class="form-group col-md-3">
+          <code>*</code>
+          <%= form.label :aquisicao_origem %>
+              <%= link_to new_admins_ativo_aquisicao_origem_path do %>
+                <i class="fa fa-plus" style="color:green"></i>
+              <% end %>
+          <%= form.select("aquisicao_origem_id", @origem_selects, {include_blank: 'Selecione...'}, class:"form-control") %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= form.label :item %> <br>
+          <%= form.text_field :item, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-3">
+          <%= form.label :quantidade %> <br>
+          <%= form.text_field :quantidade, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-3">
+          <%= form.label :valor %> <br>
+          <%= form.text_field :valor, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-6">
+          <%= form.label :gestor %> <br>
+          <%= form.text_field :gestor, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-2">
+          <%= form.label :data_aquisicao %> <br>
+          <%= form.date_field :data_aquisicao, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-2">
+          <%= form.label :numero_contrato %> <br>
+          <%= form.text_field :numero_contrato, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-2">
+          <%= form.label :empresa_contratada %> <br>
+          <%= form.text_field :empresa_contratada, class:"form-control" %>
+        </div>
+        <div class="form-group col-md-2">
+          <%= form.label :parte_interressada %> <br>
+          <%= form.text_field :parte_interressada, class:"form-control" %>
+        </div>
+      </div>
 
+      <hr/>
+      <code>* Campos obrigatorios</code>
+      <div class="text-right">
+        <%= form.submit "Salvar", class:"btn btn-primary" %>
+      </div>
+    <% end %>
+  </div>
+</div>
