--- a/app/views/admins_ativo/aquisicaos/index.html.erb
+++ b/app/views/admins_ativo/aquisicaos/index.html.erb
@@ -1,46 +1,49 @@
-<div class="row ">
-  <div class="col-lg-12">
-    <%= link_to new_admins_ativo_aquisicao_path do %>
-      <button class="btn btn-success" style="color:write">Nova Aquisição</button>
-    <% end %>   
+
+
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary">
+      <%= link_to new_admins_ativo_aquisicao_path do %>
+        <button class="btn btn-success" style="color:write">Nova Aquisição</button>
+      <% end %> 
+    </h6>
+  </div>
+  <div class="card-body">
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th>Item</th>
+          <th>Quantidade</th>
+          <th>Valor</th>
+          <th>Gestor</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @aquisicaos.each do |aquisicao| %>
+          <tr data-toggle="collapse" data-target="#lista_ativos">
+            <td><%= aquisicao.item %></td>
+            <td><%= aquisicao.quantidade %></td>
+            <td><%= aquisicao.valor %></td>
+            <td><%= aquisicao.gestor %></td>
+            <td style="width: 12px">
+              <%= link_to edit_admins_ativo_aquisicao_path(aquisicao) do %>
+                <i class="fa fa-edit"></i>
+              <% end %>
+            <td style="width: 12px">
+              <%= link_to admins_ativo_aquisicao_path(aquisicao), method: :delete, data: {confirm: "Certeza?"} do %>
+                <i class="fa fa-trash"></i>
+              <% end %>  
+            </td>
+
+            <tr id="lista_ativos" class="collapse">
+              <td class="table-light" colspan="6">
+
+              </td>  
+            </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
-
-<br>
-
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Item</th>
-      <th>Quantidade</th>
-      <th>Valor</th>
-      <th>Gestor</th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @aquisicaos.each do |aquisicao| %>
-      <tr data-toggle="collapse" data-target="#lista_ativos">
-        <td><%= aquisicao.item %></td>
-        <td><%= aquisicao.quantidade %></td>
-        <td><%= aquisicao.valor %></td>
-        <td><%= aquisicao.gestor %></td>
-        <td style="width: 12px">
-          <%= link_to edit_admins_ativo_aquisicao_path(aquisicao) do %>
-            <i class="fa fa-edit"></i>
-          <% end %>
-        <td style="width: 12px">
-          <%= link_to admins_ativo_aquisicao_path(aquisicao), method: :delete, data: {confirm: "Certeza?"} do %>
-            <i class="fa fa-trash"></i>
-          <% end %>  
-        </td>
-
-        <tr id="lista_ativos" class="collapse">
-          <td class="table-light" colspan="6">
-
-          </td>  
-        </tr>
-    <% end %>
-  </tbody>
-</table>
