--- a/app/views/admins_ativo/vinculos/_form.html.erb
+++ b/app/views/admins_ativo/vinculos/_form.html.erb
@@ -1,4 +1,3 @@
-
 <% if @vinculo.errors.any? %>
   <div class="alert alert-danger alert-dismissable">
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
@@ -10,70 +9,76 @@
   </div>
 <% end %>
 
-
-
 <%= form_with(model: [ :admins_ativo, @vinculo ], local: true ) do |form| %>
+  <div class="card shadow mb-4">
+    <div class="card-header py-3">
 
-<div class="row g-3">
-  <div class="control col-md-4">
-    *<%= form.label :area %> <br>
-    <%= form.select("area_id", @area_select, {include_blank: 'Selecione...'}, class:"form-control select2") %>
-  </div>
-
-  <div class="control col-md-4">
-    *<%= form.label :subarea %> <br>
-    <%= form.select("subarea_id", @subarea_select, {include_blank: 'Selecione...'}, class:"form-control subaarea_select") %>
-  </div>
-
-  <div class="control col-md-4">
-    *<%= form.label :usuario %> <br>
-    <%= form.select("usuario_id", @usuario_select, {include_blank: 'Selecione...'}, class:"form-control select2") %>
-  </div>
-
-  <div class="control col-md-12">
-    <%= form.label :observacao %> <br>
-    <%= form.text_field :observacao, class:"form-control border-6 small" %>
-  </div>
-</div>
-<br>
-<h5>Ativos Vinculados</h5>
-
-  <div class="links">
-    <%= link_to_add_association(form, :addativos, class: "btn-sm btn-success",
-      'data-association-insertion-node' => "#addativos",
-      'data-association-insertion-method' => "append") do %>
-      <i class="fa fa-plus" style="color:white"></i>
-    <% end %>
-  </div>
-
-<div class="container">
-  <div class="row ">
-    <div class="col">
-      Tombo
     </div>
-    <div class="col">
-      Descrição
-    </div>
-    <div class="col">
-      Status
-    </div>
-    <div class="col">
-      Observação
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="control col-md-4">
+        <code>*</code>
+          <%= form.label :area %> <br>
+          <%= form.select("area_id", @area_select, {include_blank: 'Selecione...'}, class:"form-control select2") %>
+        </div>
+
+        <div class="control col-md-4">
+        <code>*</code>
+          <%= form.label :subarea %> <br>
+          <%= form.select("subarea_id", @subarea_select, {include_blank: 'Selecione...'}, class:"form-control subaarea_select") %>
+        </div>
+
+        <div class="control col-md-4">
+        <code>*</code>
+          <%= form.label :usuario %> <br>
+          <%= form.select("usuario_id", @usuario_select, {include_blank: 'Selecione...'}, class:"form-control select2") %>
+        </div>
+
+        <div class="control col-md-12">
+          <%= form.label :observacao %> <br>
+          <%= form.text_field :observacao, class:"form-control border-6 small" %>
+        </div>
+      </div>
+      <br>
+      <h5>Ativos Vinculados</h5>
+      <hr>
+
+      <div class="links">
+        <%= link_to_add_association(form, :addativos, class: "btn-sm btn-success",
+          'data-association-insertion-node' => "#addativos",
+          'data-association-insertion-method' => "append") do %>
+          <i class="fa fa-plus" style="color:white"></i>
+        <% end %>
+      </div>
+
+      <div class="container">
+        <div class="row ">
+          <div class="col">
+            Tombo
+          </div>
+          <div class="col">
+            Descrição
+          </div>
+          <div class="col">
+            Status
+          </div>
+          <div class="col">
+            Observação
+          </div>
+        </div>
+      </div>
+
+      <br>
+        <div id='addativos'>
+          <%= form.fields_for :addativos do |addativo| %>
+            <%= render partial: "addativo_fields", locals: { f: addativo } %>
+          <% end %>
+        </div>
+      <hr>
+      <div class="text-right">
+        <%= form.submit "Salvar", class:"btn btn-primary" %>
+      </div>
     </div>
   </div>
-</div>
-
-
-  <hr>
-    <div id='addativos'>
-      <%= form.fields_for :addativos do |addativo| %>
-        <%= render partial: "addativo_fields", locals: { f: addativo } %>
-      <% end %>
-    </div>
-  <hr/>
-
-<div class="text-right">
-  <%= form.submit "Salvar", class:"btn btn-primary" %>
-</div>
 
 <% end %>
