--- a/app/views/admins_ativo/vinculos/index.html.erb
+++ b/app/views/admins_ativo/vinculos/index.html.erb
@@ -1,51 +1,50 @@
-<div class="row ">
-  <div class="col-lg-12">
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
     <%= link_to new_admins_ativo_vinculo_path do %>
       <button class="btn btn-success" style="color:write">Novo Vinculo</button>
-    <% end %>   
+    <% end %> 
+  </div>
+  <div class="card-body">
+    <table class="table table-hover table-bordered">
+      <thead>
+        <tr>
+          <th>Área</th>
+          <th>Subárea</th>
+          <th>Usuário</th>
+          <th>Observação</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @vinculos.each do |vinculo| %>
+          <tr data-toggle="collapse" data-target="#lista_ativos<%=vinculo.id%>">
+            <td><%= vinculo.area.descricao %></td>
+            <td><%= vinculo.subarea.descricao %></td>
+            <td><%= vinculo.usuario.nome %></td>
+            <td><%= vinculo.observacao %></td>
+            <td style="width: 12px">
+              <%= link_to edit_admins_ativo_vinculo_path(vinculo) do %>
+                <i class="fa fa-edit"></i>
+              <% end %>
+            <td style="width: 12px">
+              <%= link_to admins_ativo_vinculo_path(vinculo), method: :delete, data: {confirm: "Certeza?"} do %>
+                <i class="fa fa-trash"></i>
+              <% end %>  
+            </td>
+          </tr>
+          <% vinculo.addativos.each do |addativo| %>
+            <tr id="lista_ativos<%=vinculo.id%>" class="collapse">
+              <td class="table-light" colspan="6">
+                <%= addativo.ativo.tombo %> -
+                <%= addativo.ativo.ativo_description %> - 
+                <%= addativo.condicao.descricao %> - 
+                <%= addativo.descricao %>
+              </td>  
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
-
-<br>
-
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>Área</th>
-      <th>Subárea</th>
-      <th>Usuário</th>
-      <th>Observação</th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @vinculos.each do |vinculo| %>
-      <tr data-toggle="collapse" data-target="#lista_ativos<%=vinculo.id%>">
-        <td><%= vinculo.area.descricao %></td>
-        <td><%= vinculo.subarea.descricao %></td>
-        <td><%= vinculo.usuario.nome %></td>
-        <td><%= vinculo.observacao %></td>
-        <td style="width: 12px">
-          <%= link_to edit_admins_ativo_vinculo_path(vinculo) do %>
-            <i class="fa fa-edit"></i>
-          <% end %>
-        <td style="width: 12px">
-          <%= link_to admins_ativo_vinculo_path(vinculo), method: :delete, data: {confirm: "Certeza?"} do %>
-            <i class="fa fa-trash"></i>
-          <% end %>  
-        </td>
-      </tr>
-      <% vinculo.addativos.each do |addativo| %>
-        <tr id="lista_ativos<%=vinculo.id%>" class="collapse">
-          <td class="table-light" colspan="6">
-            <%= addativo.ativo.tombo %> -
-            <%= addativo.ativo.ativo_description %> - 
-            <%= addativo.condicao.descricao %> - 
-            <%= addativo.descricao %>
-          </td>  
-        </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
