--- a/app/views/admins_ativo/vinculos/_form.html.erb
+++ b/app/views/admins_ativo/vinculos/_form.html.erb
@@ -51,22 +51,24 @@
         <% end %>
       </div>
 
-      <div class="container">
-        <div class="row ">
-          <div class="col">
-            Tombo
+     
+        <div class="row">
+          <div class="col-sm">
+            TOMBO
           </div>
-          <div class="col">
-            Descrição
+          <div class="col-sm">
+            DESCRIÇÂO
           </div>
-          <div class="col">
-            Status
+          <div class="col-sm">
+            STATUS
           </div>
-          <div class="col">
-            Observação
+          <div class="col-sm-4">
+            OBSERVAÇÂO
+          </div>
+          <div class="col-sm">
           </div>
         </div>
-      </div>
+      
 
       <br>
         <div id='addativos'>
