--- a/app/views/admins_ativo/aquisicaos/_form.html.erb
+++ b/app/views/admins_ativo/aquisicaos/_form.html.erb
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group col-md-2">
           <%= form.label :valor, "Valor Aquisição" %> <br>
-          <%= form.text_field :valor, class:"form-control mask_real", :value => formatar_valor_monetario(@aquisicao.valor) %>
+          <%= form.text_field :valor, class:"form-control"%>
         </div>
         <div class="form-group col-md-6">
           <%= form.label :gestor, "Gestor do Contrato" %> <br>
@@ -57,8 +57,8 @@
           <%= form.date_field :data_aquisicao, class:"form-control" %>
         </div>
         <div class="form-group col-md-3">
-          <%= form.label :numero_contrato %> <br>
-          <%= form.text_field :numero_contrato, class:"form-control" %>
+          <%= form.label :numero_contrato, "Nº Contrato" %> <br>
+          <%= form.text_field :numero_contrato, class:"form-control masc-contrato" %>
         </div>
         <div class="form-group col-md-6">
           <%= form.label :empresa_contratada %> <br>
@@ -86,4 +86,6 @@
   </div>
 </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script> 
+
+
