--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -149,7 +149,7 @@
                       class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
                       <div class="input-group">
                         <div class="input-group-append">
-
+                          Total de Ativos:
                         </div>
                       </div>
                     </form>
