--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -145,14 +145,22 @@
                     </button>
 
                 <!-- Topbar -->
-                    <form
-                      class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+                    <form class="form-inline">
                       <div class="input-group">
                         <div class="input-group-append">
-                          Total de Ativos:
+                          <span class="d-lg-inline text-gray-600">Total de Vinculos:  <%= @total_vinculos %></span>
                         </div>
                       </div>
                     </form>
+                    <div class="topbar-divider d-none d-sm-block"></div>
+                    <form class="form-inline">
+                      <div class="input-group">
+                        <div class="input-group-append">
+                          <span class="d-lg-inline text-gray-600">Total de Ativos:  <%= @total_ativos %></span>
+                        </div>
+                      </div>
+                    </form>
+                    <div class="topbar-divider d-none d-sm-block"></div>
                 
                     <ul class="navbar-nav ml-auto">
 
@@ -162,21 +170,21 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="d-lg-inline text-gray-600" style="font-family:Tahoma;"><%= current_admin.nome %></span>
+                                <span class="d-lg-inline text-gray-600"><%= current_admin.nome %></span>
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
                               <a class="dropdown">
                                 <%= link_to admins_ativo_admins_path do %>
                                   <i class="fas fa-user fa-lg fa-fw mr-2 text-gray-800"></i>
-                                  <span style="font-family:Tahoma;">Gerenciar</span>
+                                  <span style="font-family:Arial;">Gerenciar</span>
                                 <% end %>
                               </a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown">
                                 <%= link_to destroy_admin_session_path, method: :delete do %>
                                   <i class="fas fa-sign-out-alt fa-lg fa-fw mr-2 text-gray-800"></i> 
-                                  <span style="font-family:Tahoma;">Sair</span> 
+                                  <span style="font-family:Arial;">Sair</span> 
                                 <% end %>
                               </a>
                             </div>
