--- a/app/views/admins_ativo/welcome/index.html.erb
+++ b/app/views/admins_ativo/welcome/index.html.erb
@@ -1,3 +1,24 @@
+<div class="row">  
+  <div class="col-lg">
+    <div class="card shadow mb-4">
+      <!-- Card Header - Accordion -->
+      <a href="#vinculos" class="d-block card-header py-3" data-toggle="collapse"
+        role="button" aria-expanded="true" aria-controls="vinculos">
+        <h6 class="m-0 font-weight-bold text-primary">Vinculos: <%= @total_vinculos %></h6>
+      </a>
+      <!-- Card Content - Collapse -->
+      <div class="collapse show" id="vinculos">
+        <div class="card-body">
+          <% @vinculos.each do |vinculo| %>
+            <div class="mb-2">
+              <code><%= vinculo.vinculo_descricao %></code>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="row">
   <div class="col-lg-6">
     <div class="card shadow mb-4">
@@ -18,7 +39,7 @@
     <div class="card shadow mb-4">
       <a href="#ativos" class="d-block card-header py-3" data-toggle="collapse"
         role="button" aria-expanded="true" aria-controls="ativos">
-        <h6 class="m-0 font-weight-bold text-primary">Ativos</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Ativos: <%= @total_ativos %></h6>
       </a>
       <!-- Card Content - Collapse -->
       <div class="collapse show" id="ativos">
@@ -35,24 +56,6 @@
     </div>
   </div>
   
-<div class="col-lg">
-  <div class="card shadow mb-4">
-    <!-- Card Header - Accordion -->
-    <a href="#vinculos" class="d-block card-header py-3" data-toggle="collapse"
-      role="button" aria-expanded="true" aria-controls="vinculos">
-      <h6 class="m-0 font-weight-bold text-primary">Vinculos recentes</h6>
-    </a>
-    <!-- Card Content - Collapse -->
-    <div class="collapse show" id="vinculos">
-      <div class="card-body">
-        <% @vinculos.each do |vinculo| %>
-          <div class="mb-2">
-            <code><%= vinculo.vinculo_descricao %></code>
-          </div>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
+
 
 
