--- a/app/views/admins_ativo/aquisicaos/_form.html.erb
+++ b/app/views/admins_ativo/aquisicaos/_form.html.erb
@@ -69,7 +69,8 @@
           <%= form.text_field :empresa_contratada, class:"form-control" %>
         </div>
         <div class="form-group col-md-6">
-          <%= form.label :anexar_contrato, "Anexar Contrato" %>
+          <code>*</code>
+          <%= form.label :anexar_contrato, "Anexar Contrato", title:"Apenas arquivos PDF" %>
           <%= form.file_field :anexo_contrato, class:"form-control-file", id:"file_contrato"%>
         </div>
         <div class="form-group col-md-6">
@@ -78,7 +79,7 @@
         </div>
       </div>
       <hr/>
-      <code>* Campos obrigatorios</code>
+      <code>* Campos obrigatorios</code><br>
       <div class="text-right">
         <%= form.submit "Salvar", class:"btn btn-primary" %>
       </div>
