--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -148,19 +148,10 @@
                     <form class="form-inline">
                       <div class="input-group">
                         <div class="input-group-append">
-
+                          <div class="mx-2 text-gray-600">CTI - Gerenciamento de Ativos da PGE</div>
                         </div>
                       </div>
                     </form>
-                    <div class="topbar-divider d-none d-sm-block"></div>
-                    <form class="form-inline">
-                      <div class="input-group">
-                        <div class="input-group-append">
-
-                        </div>
-                      </div>
-                    </form>
-                    <div class="topbar-divider d-none d-sm-block"></div>
                 
                     <ul class="navbar-nav ml-auto">
 
@@ -225,9 +216,9 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-<!-- Modal -->
-  <div class="modal fade" id="ativomodal" data-backdrop="static" data-keyboard="false" aria-labelledby="ativomodallLabel">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
+  <!-- Modal -->
+  <div class="modal fade" id="tipomodal" data-backdrop="static" data-keyboard="false" aria-labelledby="tipomodalLabel">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
       <div class="modal-content">
       </div>
     </div>
