--- a/app/views/admins_ativo/ativos/index.html.erb
+++ b/app/views/admins_ativo/ativos/index.html.erb
@@ -59,8 +59,8 @@
   </div>
 </div>
 
-<%= javascript_include_tag 'application' %>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
 <script>
   $(document).ready(function () {
     $('#btn-vincular').click(function () {
