--- a/app/views/admins_ativo/ativos/index.html.erb
+++ b/app/views/admins_ativo/ativos/index.html.erb
@@ -59,6 +59,7 @@
   </div>
 </div>
 
+<%= javascript_include_tag 'application' %>
 <script>
   $(document).ready(function () {
     $('#btn-vincular').click(function () {
