--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -217,8 +217,8 @@
     </a>
 
     <!-- Modal -->
-    <div class="modal fade" id="ativomodal" data-backdrop="static" data-keyboard="false" aria-labelledby="ativomodalLabel">
-      <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal fade" id="TipooModal" tabindex="-1" aria-labelledby="TipooModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
         </div>
